--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "prisma": "^4.5.0",
     "typescript": "^4.8.4"
   },
