--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint",
+    "lint": "next lint & prettier . --check",
+    "lint:fix": "next lint --fix & prettier . --write",
     "start": "next start"
   },
   "dependencies": {
