--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
     "typescript": "^4.8.4"
