--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
+    "@vercel/analytics": "^0.1.3",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "react": "18.2.0",
