--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint & prettier . --check",
     "lint:fix": "next lint --fix & prettier . --write",
-    "start": "next start"
+    "start": "next start",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -27,11 +28,13 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "cypress": "^10.11.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "^8.5.0",
@@ -39,6 +42,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
