--- a/.env-example
+++ b/.env-example
@@ -18,3 +18,6 @@ NEXTAUTH_URL=http://localhost:3000
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+# Cypress
+CYPRESS_BASE_URL=http://localhost:3000
