--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint & prettier . --check",
     "lint:fix": "next lint --fix & prettier . --write",
     "start": "next start",
-    "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'"
+    "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
+    "db:seed": "cross-env NODE_ENV=development prisma db seed",
+    "db:migrate:deploy": "prisma migrate deploy"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -34,6 +39,7 @@
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "cypress": "^10.11.0",
     "cypress-dotenv-flow": "^1.2.2",
@@ -46,6 +52,7 @@
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
     "start-server-and-test": "^1.14.0",
+    "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
