--- a/.github/workflows/e2e.reusable.yml
+++ b/.github/workflows/e2e.reusable.yml
@@ -22,8 +22,18 @@ jobs:
     name: ${{ inputs.width}}x${{ inputs.height }}
     runs-on: ubuntu-latest
     container: cypress/included:10.7.0
+    services:
+      db:
+        image: mariadb:latest
+        ports: [3306]
+        env:
+          MYSQL_USER: deckforge
+          MYSQL_PASSWORD: deckforge
+          MYSQL_DATABASE: deckforge
+          MYSQL_ROOT_PASSWORD: deckforge
+          MYSQL_ROOT_HOST: "%"
     env:
-      DATABASE_URL: "file:./db.sqlite"
+      DATABASE_URL: "mysql://deckforge:deckforge@db:3306/deckforge"
       CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
       CYPRESS_BASE_URL: http://localhost:3000
       NEXTAUTH_URL: http://localhost:3000
@@ -47,7 +57,7 @@ jobs:
           chmod -R a+rwX ./node_modules/.prisma
           chmod -R a+rwX ./cypress
           chmod -R a+rwX ./prisma
-      - name: Deploy database migrations
+      - name: Deploy database
         run: yarn db:deploy
 
       - name: Seed database
