--- a/.github/workflows/e2e.reusable.yml
+++ b/.github/workflows/e2e.reusable.yml
@@ -57,8 +57,8 @@ jobs:
           chmod -R a+rwX ./node_modules/.prisma
           chmod -R a+rwX ./cypress
           chmod -R a+rwX ./prisma
-      - name: Deploy database
-        run: yarn db:deploy
+      - name: Push database
+        run: yarn db:push
 
       - name: Seed database
         run: yarn db:seed
