--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint & prettier . --check",
     "lint:fix": "next lint --fix & prettier . --write",
     "start": "next start",
+    "test:unit": "jest",
     "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
     "db:seed": "cross-env NODE_ENV=development prisma db seed",
     "db:push": "prisma db push",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.3",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -50,10 +52,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^4.4.0",
     "prisma": "^4.5.0",
     "start-server-and-test": "^1.14.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
