--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@swc-node/jest": "^1.5.5",
+    "@swc/core": "^1.3.18",
     "@testing-library/cypress": "^8.0.7",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
@@ -57,8 +59,6 @@
     "prettier-plugin-prisma": "^4.4.0",
     "prisma": "^4.6.1",
     "start-server-and-test": "^1.14.0",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "tsx": "^3.12.1",
     "typescript": "^4.9.3"
   },
