--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.11.0",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "cross-env": "^7.0.3",
@@ -59,6 +61,7 @@
     "prettier-plugin-prisma": "^4.4.0",
     "prisma": "^4.6.1",
     "start-server-and-test": "^1.14.0",
+    "ts-essentials": "^9.3.0",
     "tsx": "^3.12.1",
     "typescript": "^4.9.3"
   },
