--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "10.0.0-rc.8",
     "@trpc/server": "10.0.0-rc.8",
     "@vercel/analytics": "^0.1.5",
+    "immer": "^9.0.16",
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
