--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,13 @@
     "import/order": ["error"],
     "@typescript-eslint/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["src/**/*.test.ts"],
+      "rules": {
+        "@typescript-eslint/no-non-null-assertion": "off"
+      }
+    }
+  ]
 }
