--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     {
       "files": ["src/**/*.test.ts"],
       "rules": {
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-non-null-asserted-optional-chain": "off"
       }
     }
   ]
