--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint & prettier . --check",
     "lint:fix": "next lint --fix & prettier . --write",
     "start": "next start",
+    "test:unit": "jest",
     "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
     "db:seed": "cross-env NODE_ENV=development prisma db seed",
     "db:push": "prisma db push",
@@ -18,44 +19,51 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.10.0",
-    "@trpc/client": "10.0.0-rc.4",
-    "@trpc/next": "10.0.0-rc.4",
-    "@trpc/react-query": "10.0.0-rc.4",
-    "@trpc/server": "10.0.0-rc.4",
-    "@vercel/analytics": "^0.1.3",
-    "next": "13.0.2",
-    "next-auth": "^4.15.1",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.6.1",
+    "@tanstack/react-query": "^4.16.1",
+    "@trpc/client": "10.0.0-rc.8",
+    "@trpc/next": "10.0.0-rc.8",
+    "@trpc/react-query": "10.0.0-rc.8",
+    "@trpc/server": "10.0.0-rc.8",
+    "@vercel/analytics": "^0.1.5",
+    "immer": "^9.0.16",
+    "next": "13.0.3",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "superjson": "1.11.0",
+    "uuid": "^9.0.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^8.0.3",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@swc-node/jest": "^1.5.5",
+    "@swc/core": "^1.3.18",
+    "@testing-library/cypress": "^8.0.7",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
-    "cypress": "^10.11.0",
+    "cypress": "^11.1.0",
     "cypress-dotenv-flow": "^1.2.2",
     "dotenv-flow": "^3.2.0",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "13.0.2",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^4.4.0",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.1",
     "start-server-and-test": "^1.14.0",
-    "tsx": "^3.11.0",
-    "typescript": "^4.8.4"
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.3"
   },
   "ct3aMetadata": {
     "initVersion": "6.8.0"
