--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,5 @@
     "**/*.mjs",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "cypress",
-    "**/*.test.ts"
-  ]
+  "exclude": ["node_modules", "cypress", "**/*.test.ts"]
 }
