--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.14",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.0.4",
     "@prisma/client": "^4.6.1",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "10.0.0-rc.8",
@@ -28,7 +32,7 @@
     "@trpc/server": "10.0.0-rc.8",
     "@vercel/analytics": "^0.1.5",
     "immer": "^9.0.16",
-    "next": "13.0.3",
+    "next": "13.0.4",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +41,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@emotion/server": "^11.10.0",
     "@swc-node/jest": "^1.5.5",
     "@swc/core": "^1.3.18",
     "@testing-library/cypress": "^8.0.7",
