--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint & prettier . --check",
-    "lint:fix": "next lint --fix & prettier . --write",
+    "lint": "next lint && prettier . --check",
+    "lint:fix": "next lint --fix && prettier . --write",
     "start": "next start",
     "test:unit": "jest",
     "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
