--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint && prettier . --check",
+    "lint": "cross-env SKIP_ENV_VALIDATION=true next lint && prettier . --check",
     "lint:fix": "next lint --fix && prettier . --write",
     "start": "next start",
     "test:unit": "jest",
