--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint & prettier . --check",
-    "lint:fix": "next lint --fix & prettier . --write",
+    "lint": "cross-env SKIP_ENV_VALIDATION=true next lint && prettier . --check",
+    "lint:fix": "next lint --fix && prettier . --write",
     "start": "next start",
     "test:unit": "jest",
     "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.0.4",
@@ -61,6 +62,7 @@
     "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mui-path-imports": "^0.0.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
