--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-mui-path-imports": "^0.0.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.3.1",
+    "next-type-safe-routes": "^0.3.1-alpha.1",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^4.4.0",
     "prisma": "^4.6.1",
