Add src/@types to directory access step in e2e test CI

--- a/.github/workflows/e2e.reusable.yml
+++ b/.github/workflows/e2e.reusable.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Directory access permissions
         run: |
           chmod -R a+rwX ./node_modules/.prisma
+          chmod -R a+rwX ./src/@types
           chmod -R a+rwX ./cypress
           chmod -R a+rwX ./prisma
       - name: Push database
