--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "prisma": "4.6.1",
     "start-server-and-test": "1.14.0",
     "tsx": "3.12.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zod-prisma": "^0.5.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.8.0"
