--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "concurrently \"yarn app:dev\" \"yarn api:dev\" --names \"app,api\"",
     "app:dev": "vite",
     "api:dev": "tsx watch src/api/dev",
-    "build": "tsc --project src/legacy/app && vite build",
+    "build": "tsc --project src/app && vite build",
     "preview": "vite preview",
     "postinstall": "prisma generate",
     "lint": "eslint . && prettier . --check",
