--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Default environment variables
 VITE_AUTH0_DOMAIN=deckforge.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=uGyNxX27u4QLv75ZddWqM8yYrtxcwsMw
+VITE_AUTH0_CACHE_LOCATION=localstorage
