--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Defaults for all environments (NO SECRETS)
+CYPRESS_BASE_URL=http://localhost:5173
 VITE_API_PORT=3000
 VITE_AUTH0_DOMAIN=deckforge.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=uGyNxX27u4QLv75ZddWqM8yYrtxcwsMw
