--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.0.0",
+    "@auth0/auth0-spa-js": "2.0.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
@@ -36,9 +36,9 @@
     "@vercel/analytics": "0.1.5",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "express-jwt": "^7.7.7",
+    "express-jwt": "7.7.7",
     "immer": "9.0.16",
-    "jwks-rsa": "^3.0.0",
+    "jwks-rsa": "3.0.0",
     "morgan": "1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
