--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "concurrently \"yarn app:dev\" \"yarn api:dev\" --names \"app,api\"",
     "app:dev": "vite",
     "api:dev": "tsx watch src/api/dev",
-    "build": "tsc --project src/app && vite build",
+    "build": "yarn typecheck && vite build",
+    "typecheck": "tsc --project src/api && tsc --project src/app",
     "preview": "vite preview",
     "postinstall": "prisma generate",
     "lint": "eslint . && prettier . --check",
@@ -21,6 +22,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "2.0.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
@@ -34,7 +36,9 @@
     "@vercel/analytics": "0.1.5",
     "cors": "2.8.5",
     "express": "4.18.2",
+    "express-jwt": "7.7.7",
     "immer": "9.0.16",
+    "jwks-rsa": "3.0.0",
     "morgan": "1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -61,7 +65,7 @@
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
     "cross-var": "1.1.0",
-    "cypress": "11.1.0",
+    "cypress": "11.2.0",
     "cypress-dotenv-flow": "1.2.2",
     "dotenv-flow": "3.2.0",
     "eslint": "8.27.0",
