--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
-    "@tanstack/react-query": "4.16.1",
+    "@tanstack/react-query": "4.18.0",
     "@trpc/client": "10.1.0",
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
@@ -37,9 +37,11 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-jwt": "7.7.7",
+    "history": "5.3.0",
     "immer": "9.0.16",
     "jwks-rsa": "3.0.0",
     "morgan": "1.10.0",
+    "path-to-regexp": "6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.11.0",
