--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-jwt": "7.7.7",
-    "history": "5.3.0",
+    "history": "4.10.1",
     "immer": "9.0.16",
     "jwks-rsa": "3.0.0",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "5.3.3",
+    "react-router-dom": "5.3.3",
+    "react-typesafe-routes": "0.0.8",
     "superjson": "1.11.0",
     "uuid": "9.0.0",
     "zod": "3.19.1"
@@ -60,6 +63,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
