Use port 3000 and 3001 for app and pi in test and dev

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Defaults for all environments (NO SECRETS)
-CYPRESS_BASE_URL=http://localhost:5173
-VITE_API_PORT=3000
+VITE_APP_PORT=3000
+VITE_API_PORT=3001
+CYPRESS_BASE_URL=http://localhost:3000
 VITE_AUTH0_DOMAIN=deckforge.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=uGyNxX27u4QLv75ZddWqM8yYrtxcwsMw
 VITE_AUTH0_AUDIENCE=https://deckforge.eu.auth0.com/api/v2/
