Set node env correctly before running api:dev|prod

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prod": "concurrently \"yarn app:prod\" \"yarn api:prod\" --names \"app,api\"",
     "app:dev": "vite",
     "app:prod": "vite build && vite preview",
-    "api:dev": "tsx watch src/api/start",
-    "api:prod": "cross-env NODE_ENV=production && tsx src/api/start",
+    "api:dev": "cross-env NODE_ENV=development tsx watch src/api/start",
+    "api:prod": "cross-env NODE_ENV=production tsx src/api/start",
     "build": "yarn typecheck && vite build",
     "typecheck": "tsc --project src/api && tsc --project src/app",
     "postinstall": "prisma generate",
