Use prod builds in e2e test (#23)
* Use prod builds in e2e test

* Update seed.ts to use the correct prisma client instance

* Use production url for cypress in CI

* Use port 3000 and 3001 for app and pi in test and dev

* Update logger ling configuration

* Use default cypress base url in CI

* Set node env correctly before running api:dev|prod

* Make sure CYPRESS_BASE_URL env var is set in CI

--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"yarn app:dev\" \"yarn api:dev\" --names \"app,api\"",
+    "prod": "concurrently \"yarn app:prod\" \"yarn api:prod\" --names \"app,api\"",
     "app:dev": "vite",
-    "api:dev": "tsx watch src/api/dev",
+    "app:prod": "vite build && vite preview",
+    "api:dev": "cross-env NODE_ENV=development tsx watch src/api/start",
+    "api:prod": "cross-env NODE_ENV=production tsx src/api/start",
     "build": "yarn typecheck && vite build",
     "typecheck": "tsc --project src/api && tsc --project src/app",
-    "preview": "vite preview",
     "postinstall": "prisma generate",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
     "test:unit": "jest",
-    "test:e2e": "cross-var start-server-and-test dev $CYPRESS_BASE_URL 'cypress run'",
+    "test:e2e": "cross-var start-server-and-test prod $CYPRESS_BASE_URL 'cypress run'",
     "db:seed": "cross-env NODE_ENV=development prisma db seed",
     "db:push": "prisma db push",
     "db:deploy": "pscale deploy-request create deckforge"
