--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-typesafe-routes": "0.0.8",
     "superjson": "1.11.0",
     "uuid": "9.0.0",
-    "zod": "3.19.1"
+    "zod": "3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@swc-node/jest": "1.5.5",
