--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "5.3.3",
     "react-typesafe-routes": "0.0.8",
     "superjson": "1.11.0",
+    "use-debounce": "8.0.4",
     "uuid": "9.0.0",
     "zod": "3.19.1",
     "zustand": "^4.1.4"
