Upgrade cypress version and use chrome in CI

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
     "test:unit": "jest",
-    "test:e2e": "cross-var start-server-and-test prod $CYPRESS_BASE_URL 'cypress run'",
+    "test:e2e": "cross-var start-server-and-test prod $CYPRESS_BASE_URL 'cypress run --browser chrome'",
     "db:reset": "dotenv-flow -- prisma migrate reset --force",
     "db:create-migration": "dotenv-flow prisma migrate dev",
     "db:seed": "dotenv-flow prisma db seed",
@@ -77,7 +77,7 @@
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
     "cross-var": "1.1.0",
-    "cypress": "10.7.0",
+    "cypress": "11.2.0",
     "cypress-dotenv-flow": "1.2.2",
     "dotenv-flow": "3.2.0",
     "dotenv-flow-cli": "^1.0.0",
