CRUD for game entities (#33)
* Refactor

* Stub game test suite

* Create example migrations

* Create db:reset command

* Add e2e test for creating games

* e2e test for initial empty state of games

* Enable cypress component testing

* Create useDialog hook

* Plug in DialogOutlet

* Create PromptDialog component

* Make prompt dialog form accessible

* Disable restore focus for prompt dialog

* Invalidate all queries on any mutation

* Add game service and implement list and create procedures

* Add game model to prisma

* Test and implement game list and create actions

* string -> ReactNode

* Create ConfirmDialog component

* Test and implement delete game functionality

* Refactor

* Refactor

* Add basic content suspense to layout

* Display game name on edit page

* Code split all routes

* Enable suspense for trpc queries

* Auto focus confirm button

* Vite typescript checker should use app tsconfig

* Error boundary

* Align query client retry time with cypress wait time

* Header should be a div to allow nested paragraphs

* Create debounced TextField component

* Test and implement game rename feature

* Lint fix

* CI should use db:reset for database setup

* Try passing args to dotenv-flow-cli differently

* Responsive menu navigation in e2e tests

* Disable prisma seed

* Restore prisma seed

* Revert to cypress 10.7

* Upgrade cypress version and use chrome in CI

* Update cypress CI image to match cypress package version (11.2.0)

* Only expose user facing errors in production

* should do instanceof on error.cause, not error

* use UserFacingError where relevant

* Make EXPOSE_INTERNAL_ERRORS opt-in

* Add unit tests for zodBooleanish

* Redirect everything to root except /api

* Rudimentary (and flawed) JWT to AuthContext conversion

* AuthContext should have no name property

* Correct fake jwt

* my game list should return total based on the us

--- a/.github/workflows/e2e.reusable.yml
+++ b/.github/workflows/e2e.reusable.yml
@@ -21,7 +21,7 @@ jobs:
   run:
     name: ${{ inputs.width}}x${{ inputs.height }}
     runs-on: ubuntu-latest
-    container: cypress/included:10.7.0
+    container: cypress/included:11.2.0
     services:
       db:
         image: mariadb:latest
@@ -34,7 +34,9 @@ jobs:
           MYSQL_ROOT_HOST: "%"
     env:
       DATABASE_URL: "mysql://deckforge:deckforge@db:3306/deckforge"
+      VITE_SHOW_ERROR_DETAILS: true
       VITE_AUTH_IMPLEMENTATION: "fake"
+      EXPOSE_INTERNAL_ERRORS: true
       CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
       CYPRESS_BASE_URL: http://localhost:3000
     steps:
@@ -55,11 +57,8 @@ jobs:
           mkdir ./node_modules/.vite && chmod -R a+rwX ./node_modules/.vite
           chmod -R a+rwX ./cypress
           chmod -R a+rwX ./prisma
-      - name: Push database
-        run: yarn db:push
-
-      - name: Seed database
-        run: yarn db:seed
+      - name: Set up database
+        run: yarn db:reset
 
       - name: Run e2e tests
         run: yarn test:e2e
