--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" },
     { "source": "/(.*)", "destination": "/" }
-  ]
+  ],
+  "github": {
+    "silent": true
+  }
 }
