--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
     "lint:fix": "eslint . --fix && prettier . --write",
     "test:unit": "jest",
     "test:e2e": "cross-var start-server-and-test prod $CYPRESS_BASE_URL 'cypress run --browser chrome'",
-    "db:reset": "dotenv-flow -- prisma migrate reset --force",
-    "db:create-migration": "dotenv-flow prisma migrate dev",
-    "db:seed": "dotenv-flow prisma db seed",
     "db:push": "dotenv-flow prisma db push",
+    "db:seed": "dotenv-flow tsx prisma/seed.ts",
+    "db:reset": "dotenv-flow tsx prisma/reset.ts",
     "db:deploy": "dotenv-flow pscale deploy-request create deckforge"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "2.0.0",
