--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ VITE_AUTH_IMPLEMENTATION=real
 JWKS_URI=https://deckforge.eu.auth0.com/.well-known/jwks.json
 JWKS_REQUESTS_PER_MINUTE=5
 JWT_ALGORITHMS=RS256
-PRISMA_LOGS=query,error,warn
+DATABASE_LOGS=query,error,warn
