Initialize database before running tests in CI

--- a/.github/workflows/e2e.reusable.yml
+++ b/.github/workflows/e2e.reusable.yml
@@ -57,8 +57,8 @@ jobs:
           mkdir ./node_modules/.vite && chmod -R a+rwX ./node_modules/.vite
           chmod -R a+rwX ./cypress
           chmod -R a+rwX ./prisma
-      - name: Set up database
-        run: yarn db:reset
+      - name: Initialize database
+        run: yarn db:push
 
       - name: Run e2e tests
         run: yarn test:e2e
