Rip out auth0 and implement prototype auth service

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 # Development defaults (NO SECRETS)
 VITE_ENABLE_LOGGER_LINK=true
+AUTH_SECRET="development secret (not really secret)"
 EXPOSE_INTERNAL_ERRORS=true
