--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # Development defaults (NO SECRETS)
 VITE_ENABLE_LOGGER_LINK=true
-AUTH_SECRET="development secret (not really secret)"
+AUTH_SECRET=developmentSecretNotReallySecret
 EXPOSE_INTERNAL_ERRORS=true
