--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
     "@vercel/analytics": "0.1.5",
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-jwt": "7.7.7",
@@ -56,6 +57,7 @@
     "@swc-node/jest": "1.5.5",
     "@swc/core": "1.3.18",
     "@testing-library/cypress": "8.0.7",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "2.8.12",
     "@types/dotenv-flow": "3.2.0",
     "@types/express": "4.17.14",
