--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
@@ -32,6 +33,7 @@
     "@trpc/client": "10.1.0",
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
+    "@types/lodash.get": "^4.4.7",
     "@vercel/analytics": "0.1.5",
     "bcrypt": "^5.1.0",
     "cors": "2.8.5",
@@ -40,10 +42,12 @@
     "history": "4.10.1",
     "immer": "9.0.16",
     "jwks-rsa": "3.0.0",
+    "lodash.get": "^4.4.2",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
     "react-typesafe-routes": "0.0.8",
