--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "db:deploy": "dotenv-flow pscale deploy-request create deckforge"
   },
   "dependencies": {
-    "@badrap/result": "^0.2.13",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
@@ -59,6 +58,7 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@manokii/zod-prisma": "^0.6.3",
     "@swc-node/jest": "1.5.5",
     "@swc/core": "1.3.18",
     "@testing-library/cypress": "8.0.7",
@@ -97,7 +97,6 @@
     "tsx": "3.12.1",
     "typescript": "4.9.3",
     "vite": "3.2.3",
-    "vite-plugin-checker": "0.5.1",
-    "zod-prisma": "0.5.4"
+    "vite-plugin-checker": "0.5.1"
   }
 }
