--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
-    "@manokii/zod-prisma": "^0.6.3",
     "@swc-node/jest": "1.5.5",
     "@swc/core": "1.3.18",
     "@testing-library/cypress": "8.0.7",
@@ -97,6 +96,7 @@
     "tsx": "3.12.1",
     "typescript": "4.9.3",
     "vite": "3.2.3",
-    "vite-plugin-checker": "0.5.1"
+    "vite-plugin-checker": "0.5.1",
+    "zod-prisma": "^0.5.4"
   }
 }
