--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "db:deploy": "dotenv-flow pscale deploy-request create deckforge"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "2.0.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
@@ -33,17 +33,21 @@
     "@trpc/client": "10.1.0",
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
+    "@types/lodash.get": "^4.4.7",
     "@vercel/analytics": "0.1.5",
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "express-jwt": "7.7.7",
     "history": "4.10.1",
     "immer": "9.0.16",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "3.0.0",
+    "lodash.get": "^4.4.2",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
     "react-typesafe-routes": "0.0.8",
@@ -57,6 +61,7 @@
     "@swc-node/jest": "1.5.5",
     "@swc/core": "1.3.18",
     "@testing-library/cypress": "8.0.7",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "2.8.12",
     "@types/dotenv-flow": "3.2.0",
     "@types/express": "4.17.14",
@@ -92,6 +97,6 @@
     "typescript": "4.9.3",
     "vite": "3.2.3",
     "vite-plugin-checker": "0.5.1",
-    "zod-prisma": "0.5.4"
+    "zod-prisma": "^0.5.4"
   }
 }
