Enable web vitals

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Defaults for all environments (NO SECRETS)
 VITE_APP_PORT=3000
 VITE_API_PORT=3001
+VITE_WEBVITALS_URL='https://vitals.vercel-analytics.com/v1/vitals'
 CYPRESS_BASE_URL=http://localhost:3000
 DATABASE_LOGS=query,error,warn
