--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "superjson": "1.11.0",
     "use-debounce": "8.0.4",
     "uuid": "9.0.0",
+    "web-vitals": "3.1.0",
     "zod": "3.19.1",
     "zustand": "^4.1.4"
   },
