--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "tsx": "3.12.1",
     "typescript": "4.9.3",
     "vite": "3.2.3",
-    "vite-plugin-checker": "0.5.1",
-    "zod-prisma": "0.5.4"
+    "vite-plugin-checker": "0.5.1"
   }
 }
