--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
     "@hookform/resolvers": "2.9.10",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
