--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "db:reset": "dotenv-flow tsx prisma/reset.ts",
     "db:deploy": "dotenv-flow pscale deploy-request create deckforge"
   },
+  "prisma": {
+    "seed": "yarn db:seed"
+  },
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
     "@hookform/resolvers": "2.9.10",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
@@ -33,7 +37,6 @@
     "@trpc/client": "10.1.0",
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
-    "@types/lodash.get": "4.4.7",
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
@@ -42,7 +45,7 @@
     "immer": "9.0.16",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "3.0.0",
-    "lodash.get": "4.4.2",
+    "lodash": "4.17.21",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
     "react": "18.2.0",
@@ -67,6 +70,7 @@
     "@types/dotenv-flow": "3.2.0",
     "@types/express": "4.17.14",
     "@types/jest": "29.2.3",
+    "@types/lodash": "4.14.191",
     "@types/morgan": "1.9.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -97,7 +101,6 @@
     "tsx": "3.12.1",
     "typescript": "4.9.3",
     "vite": "3.2.3",
-    "vite-plugin-checker": "0.5.1",
-    "zod-prisma": "0.5.4"
+    "vite-plugin-checker": "0.5.1"
   }
 }
