--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/icons-material": "5.10.14",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "4.18.0",
     "@trpc/client": "10.1.0",
     "@trpc/react-query": "10.1.0",
@@ -51,9 +52,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
+    "react-redux": "^8.0.5",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
     "react-typesafe-routes": "0.0.8",
+    "redux": "^4.2.0",
+    "redux-undo": "^1.0.1",
     "superjson": "1.11.0",
     "use-debounce": "8.0.4",
     "uuid": "9.0.0",
