--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hookform/resolvers": "2.9.10",
     "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "5.10.14",
+    "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "5.10.14",
     "@prisma/client": "4.6.1",
     "@reduxjs/toolkit": "^1.9.1",
