--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
+    "react-mosaic-component": "^5.3.0",
     "react-redux": "8.0.5",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
