--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "3.0.0",
     "lodash": "4.17.21",
+    "monaco-editor": "^0.34.1",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
     "react": "18.2.0",
