--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,17 @@
     "mui-path-imports"
   ],
   "extends": [
-    "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:react/jsx-runtime",
     "prettier"
   ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
     "react/jsx-key": "off",
     "@typescript-eslint/consistent-type-imports": "warn",
