Add seeded random function to runtime

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
+    "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
@@ -98,8 +99,8 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-mui-path-imports": "0.0.3",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
     "prettier": "2.7.1",
