--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "cross-var": "1.1.0",
     "cypress": "11.2.0",
     "cypress-dotenv-flow": "1.2.2",
+    "cypress-network-idle": "^1.11.2",
     "dotenv-flow": "3.2.0",
     "dotenv-flow-cli": "1.0.0",
     "eslint": "8.30.0",
