--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
+    "react-inspector": "^6.0.1",
     "react-mosaic-component": "5.3.0",
     "react-redux": "8.0.5",
     "react-router": "5.3.3",
