Stub pixi implementation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
     "@hookform/resolvers": "2.9.10",
+    "@inlet/react-pixi": "^6.8.0",
     "@monaco-editor/react": "4.4.6",
     "@mui/icons-material": "5.10.14",
     "@mui/lab": "5.0.0-alpha.111",
@@ -51,6 +52,7 @@
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
+    "pixi.js": "^7.1.0",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
