--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "4.17.21",
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
+    "msw": "^0.49.2",
     "path-to-regexp": "6.2.1",
     "pixi.js": "^7.1.0",
     "rand-seed": "1.0.2",
