Add typescript tracing and analysis scripts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "api:dev": "cross-env NODE_ENV=development tsx watch src/api/start",
     "api:prod": "cross-env NODE_ENV=production tsx src/api/start",
     "build": "yarn typecheck && vite build",
-    "typecheck": "tsc --project src/api && tsc --project src/app",
+    "typecheck": "yarn tsc:api && yarn tsc:app",
+    "tsc:api": "tsc --project src/api",
+    "tsc:app": "tsc --project src/app",
+    "tsc:trace:api": "yarn tsc:api --generateTrace trace/api --incremental false",
+    "tsc:trace:app": "yarn tsc:app --generateTrace trace/app --incremental false",
+    "tsc:analyze:api": "npx @typescript/analyze-trace trace/api",
+    "tsc:analyze:app": "npx @typescript/analyze-trace trace/app",
     "postinstall": "prisma generate",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
