acorn + sandboxr implementation of script compiler

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
     "@vercel/analytics": "0.1.5",
+    "acorn": "^2.6.4",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
     "excalibur": "0.27.0",
@@ -70,6 +71,7 @@
     "react-typesafe-routes": "0.0.8",
     "redux": "4.2.0",
     "redux-undo": "1.0.1",
+    "sandboxr": "^0.16.2",
     "slugify": "1.6.5",
     "superjson": "1.11.0",
     "uniqolor": "1.1.0",
