broken script compiler implementation using js-interpreter

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "seed": "yarn db:seed"
   },
   "dependencies": {
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/standalone": "7.20.15",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
@@ -46,13 +48,13 @@
     "@trpc/react-query": "10.1.0",
     "@trpc/server": "10.1.0",
     "@vercel/analytics": "0.1.5",
-    "acorn": "^2.6.4",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
     "excalibur": "0.27.0",
     "express": "4.18.2",
     "history": "4.10.1",
     "immer": "9.0.16",
+    "js-interpreter": "4.0.0",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "3.0.0",
     "lodash": "4.17.21",
@@ -71,7 +73,6 @@
     "react-typesafe-routes": "0.0.8",
     "redux": "4.2.0",
     "redux-undo": "1.0.1",
-    "sandboxr": "^0.16.2",
     "slugify": "1.6.5",
     "superjson": "1.11.0",
     "uniqolor": "1.1.0",
@@ -86,6 +87,7 @@
     "@swc/core": "1.3.18",
     "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
+    "@types/babel__standalone": "^7.1.4",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
     "@types/dotenv-flow": "3.2.0",
