Stub quick js module runtime implementation

--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "morgan": "1.10.0",
     "neverthrow": "6.0.0",
     "path-to-regexp": "6.2.1",
+    "proxy-deep": "^3.1.1",
+    "quickjs-emscripten": "^0.21.1",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
